--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
         <!-- utils -->
         <guava.version>20.0</guava.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
     </properties>
 
     <dependencies>
@@ -55,6 +56,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${commons-collections.version}</version>
         </dependency>
     </dependencies>
 
